[package]
name = "wink"
version = "0.2.2"
edition = "2018"
license = "MIT"
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
description = "Windows link tools with NTFS junctions support."
readme = "readme.md"
repository = "https://github.com/insomnimus/wink"
keywords = [
	"cli", "windows", "file", "utility",
]
categories = [
	"command-line-utilities", "filesystem"
]

[dependencies]
clap = "3.0.0-beta.2"
junction = "0.2.0"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
