[package]
name = "wink"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
description = "Windows link tools with NTFS junctions support."
readme = "readme.md"
repository = "https://github.com/insomnimus/wink"
keywords = [
	"cli", "windows", "file", "utility",
]
categories = [
	"command-line-utilities", "filesystem"
]

[dependencies]
clap = { version = "3.2.8", features = ["cargo", "wrap_help", "unicode"] }
junction = "0.2.0"
normpath = "0.3.2"
wild = "2.0.4"

[build-dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
clap_complete = "3.2.3"
